--- a/app/views/organized_mailer/parking_notification.html.haml
+++ b/app/views/organized_mailer/parking_notification.html.haml
@@ -56,3 +56,7 @@
         %strong
           = @organization&.name
         know that you retrieved your #{@bike.type}! Click the button above.
+
+- if @parking_notification.image.present?
+  %a{ href: @parking_notification.image_url }
+    = image_tag @parking_notification.image_url(:large), style: "display: block; margin: 20px auto; width: auto; height: 100%; max-height: 400px;"
