organized notification display updates

--- a/app/views/organized/parking_notifications/_show_details.html.haml
+++ b/app/views/organized/parking_notifications/_show_details.html.haml
@@ -15,7 +15,7 @@
           %td= t(".by")
           %td= @parking_notification.user.display_name
         %tr
-          %td Kind
+          %td Type
           %td
             %strong
               = @parking_notification.kind_humanized
