--- a/app/views/organized/parking_notifications/_table.html.haml
+++ b/app/views/organized/parking_notifications/_table.html.haml
@@ -28,9 +28,9 @@
       %th=t(".address")
     %th
       - if render_sortable
-        = sortable "kind"
+        = sortable "kind", "Type"
       - else
-        Kind
+        Type
     %th
       =t(".by")
     - unless skip_repeat
