always show notes, some other rearranging

--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -298,17 +298,17 @@
           #{@bike.type&.titleize} is impounded!
         - if impound_record.present?
           = link_to "Impound record ##{impound_record.display_id}", organization_impound_record_path(impound_record.display_id, organization_id: passive_organization.to_param)
-          %em.small created by this notification:
+          %em.small created by this impound notification:
 
     -# The parking notification that impounded the bike is never current - but we want to show it separately
     - current_impound_notification = parking_notifications.impound_notification.where(impound_record_id: impound_record.id).first
     - if current_impound_notification.present?
-      = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: [current_impound_notification], skip_bike: true, skip_map_cell: true, render_address: true, render_internal_notes: true, skip_resolved: true, hide_status: true }
+      = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: [current_impound_notification], skip_bike: true, skip_map_cell: true, render_address: true, skip_resolved: true, hide_status: true }
       .mt-4{ style: "padding-bottom: 12px;" }
 
     - resolved_notifications = parking_notifications.resolved.where.not(id: current_impound_notification&.id)
     %p{ style: "margin-top: -12px;" }
-      = pluralize number_with_delimiter(parking_notifications.current.count), "Active notifications"
+      = pluralize number_with_delimiter(parking_notifications.current.count), "current notifications"
       - if parking_notifications.resolved.count > 0
         \-
         %a{ href: "#resolvedParkingNotificationTable", "aria-controls" => "resolvedParkingNotificationTable", "data-toggle" => "collapse" }
@@ -316,13 +316,13 @@
           = pluralize number_with_delimiter(resolved_notifications.count), "resolved notification"
       for #{@bike.type}
     - if parking_notifications.current.any?
-      = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: parking_notifications.current, skip_bike: true, skip_map_cell: true, render_address: true, skip_resolved: true, render_internal_notes: true }
+      = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: parking_notifications.current, skip_bike: true, skip_map_cell: true, render_address: true, skip_resolved: true }
 
     - if resolved_notifications.any?
       .collapse#resolvedParkingNotificationTable
         %p.mb-0
           %strong Resolved notifications
-        = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: resolved_notifications.limit(10), skip_bike: true, skip_map_cell: true, render_address: true, render_internal_notes: true }
+        = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: resolved_notifications.limit(10), skip_bike: true, skip_map_cell: true, render_address: true }
 
     - unless @bike.status_impounded?
       - parking_notification_open = params[:parking_notification].present?
