--- a/app/views/org_public/impounded_bikes/index.html.haml
+++ b/app/views/org_public/impounded_bikes/index.html.haml
@@ -1,86 +1,86 @@
 -# TODO: add translations
 
-.organized-page-header
-  %h1
+.container
+  %h1.clearfix
+    - if current_organization.display_avatar?
+      = image_tag current_organization.avatar.url(:medium), class: "float-left mr-2"
     %strong= current_organization.name
     Impounded bikes
 
-= render partial: "/shared/period_select"
+.container-fluid
+  = render partial: "/shared/period_select"
 
-.mt-4
-  = form_tag organization_impounded_bikes_path(organization_id: current_organization.to_param), id: 'bikes_search_form', class: 'bikes-search-form', method: :get do
-    .query-field-wrap.nojs
-      - opt_vals = @selected_query_items_options.map { |i| i.is_a?(String) ? [i, i] : [i['text'], i['search_id']]  }
-      = select_tag :query_items,                                      |
-        options_for_select(opt_vals, selected: opt_vals.map(&:last)), |
-        placeholder: t(".search_bike_descriptions"),                  |
-        class: 'form-control query-field',                            |
-        multiple: true
+  .mt-4
+    = form_tag organization_impounded_bikes_path(organization_id: current_organization.to_param), id: 'bikes_search_form', class: 'bikes-search-form', method: :get do
+      .query-field-wrap.nojs
+        - opt_vals = @selected_query_items_options.map { |i| i.is_a?(String) ? [i, i] : [i['text'], i['search_id']]  }
+        = select_tag :query_items,                                      |
+          options_for_select(opt_vals, selected: opt_vals.map(&:last)), |
+          placeholder: t(".search_bike_descriptions"),                  |
+          class: 'form-control query-field',                            |
+          multiple: true
 
-      = text_field_tag :query, params[:query], placeholder: t(".search_bike_descriptions"), class: 'form-control query-field'
-      .sidebyside-queries
-        = text_field_tag :search_email, params[:search_email], placeholder: t(".search_owner_email"), class: 'form-control query-field email-field-too'
-        = text_field_tag :serial, params[:serial], placeholder: t(".search_for_serial_number"), class: 'form-control query-field email-field-too'
+        = text_field_tag :query, params[:query], placeholder: t(".search_bike_descriptions"), class: 'form-control query-field'
+        .sidebyside-queries
+          = text_field_tag :search_email, params[:search_email], placeholder: t(".search_owner_email"), class: 'form-control query-field email-field-too'
+          = text_field_tag :serial, params[:serial], placeholder: t(".search_for_serial_number"), class: 'form-control query-field email-field-too'
 
-    .search-button-wrap
-      = button_tag(type: 'submit', class: 'searchit btn btn-primary') do
-        :plain
-          <svg id="search-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29 29"><defs><style>.cls-1,.cls-2{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2px;}.cls-2{stroke-linecap:round;}</style></defs><title>searcher</title><circle class="cls-1" cx="10.39" cy="10.39" r="9.39"/><line class="cls-2" x1="17.03" y1="17.03" x2="28" y2="28"/></svg>
-    = hidden_field_tag :stolenness, @stolenness
-    = hidden_field_tag :organization_id, passive_organization&.to_param
+      .search-button-wrap
+        = button_tag(type: 'submit', class: 'searchit btn btn-primary') do
+          :plain
+            <svg id="search-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29 29"><defs><style>.cls-1,.cls-2{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2px;}.cls-2{stroke-linecap:round;}</style></defs><title>searcher</title><circle class="cls-1" cx="10.39" cy="10.39" r="9.39"/><line class="cls-2" x1="17.03" y1="17.03" x2="28" y2="28"/></svg>
+      = hidden_field_tag :stolenness, @stolenness
+      = hidden_field_tag :organization_id, passive_organization&.to_param
 
-    = hidden_field_tag :period, params[:period]
-    = hidden_field_tag :start_time, params[:start_time]
-    = hidden_field_tag :end_time, params[:end_time]
+      = hidden_field_tag :period, params[:period]
+      = hidden_field_tag :start_time, params[:start_time]
+      = hidden_field_tag :end_time, params[:end_time]
 
-.mt-4.mb-4
-  = pluralize(number_with_delimiter(@impound_records.total_count), "matching impound record")
-  %em
-    = humanized_time_range(@time_range)
+  .mt-4.mb-4
+    = pluralize(number_with_delimiter(@impound_records.total_count), "matching impound record")
+    %em
+      = humanized_time_range(@time_range)
 
-- skip_location ||= !current_organization.enabled?("impound_bikes_locations")
-.full-screen-table
-  %table.table.table-striped.table-bordered.table-sm.without-exterior-border
-    %thead.small-header.hidden-md-down
-      %th
-        = sortable "display_id", "ID"
-      %th
-        = sortable "created_at", "Impounded&nbsp;at"
-      %th
-        Impounded from
-
-      - unless skip_location
+  - skip_location ||= !current_organization.enabled?("impound_bikes_locations")
+  .full-screen-table
+    %table.table.table-striped.table-bordered.table-sm.without-exterior-border
+      %thead.small-header.hidden-md-down
         %th
-          = sortable "location_id"
-      %th Bike
+          %small= sortable "display_id", "Impound&nbsp;ID"
+        %th= sortable "created_at", "Impounded&nbsp;at"
+        %th Bike
+        - unless skip_location
+          %th= sortable "location_id"
+        %th Impounded from
 
-    %tbody
-      - @impound_records.each do |impound_record|
-        %tr
-          %td
-            = impound_record.display_id
-          %td
-            %a.convertTime.preciseTime
-              = l(impound_record.created_at, format: :convert_time)
-          %td
-            - if impound_record.parking_notification.present?
-              = address_formatted(impound_record.parking_notification)
-          - unless skip_location
+      %tbody
+        - @impound_records.each do |impound_record|
+          %tr
             %td
-              %small
-                = impound_record.location&.name
-          %td
-            - if impound_record.bike.present?
-              - bike = impound_record.bike
-              %a{ href: bike_path(bike.to_param) }
-                = bike.frame_colors.to_sentence
-                %strong
-                  = bike.mnfg_name
-                - if bike.frame_model.present?
-                  %em
-                    = bike.frame_model_truncated
-                - unless bike.cycle_type == "bike"
-                  %small= bike.type
+              = impound_record.display_id
+            %td
+              %a.convertTime.preciseTime
+                = l(impound_record.created_at, format: :convert_time)
+            %td
+              - if impound_record.bike.present?
+                - bike = impound_record.bike
+                %a{ href: bike_path(bike.to_param) }
+                  = bike.frame_colors.to_sentence
+                  %strong
+                    = bike.mnfg_name
+                  - if bike.frame_model.present?
+                    %em
+                      = bike.frame_model_truncated
+                  - unless bike.cycle_type == "bike"
+                    %small= bike.type
+            - unless skip_location
+              %td
+                %small
+                  = impound_record.location&.name
+            %td
+              - if impound_record.parking_notification.present?
+                = address_formatted(impound_record.parking_notification)
 
-.paginate-container.paginate-container-bottom
-  = paginate @impound_records
+
+  .paginate-container.paginate-container-bottom
+    = paginate @impound_records
